--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 CHANGELOG
 =========
 
+0.2.0.0 - 2020-07-31
+--------------------
+
+* Add custom sprites for osu!mania.
+
 0.1.0.0 - 2020-07-31
 --------------------
 
